--- a/src/app/components/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/src/app/components/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -3,6 +3,6 @@
    Are you sure you want to delete user : <strong>{{data.username}}</strong> ?'
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close (click)="onConfirm()">Yes</button>
+    <button id="confirm-delete-user" mat-button mat-dialog-close (click)="onConfirm()">Yes</button>
     <button mat-button mat-dialog-close (click)="onCancel()">Cancel</button>
 </mat-dialog-actions>
