--- a/src/app/components/delete-task-dialog/delete-task-dialog.component.html
+++ b/src/app/components/delete-task-dialog/delete-task-dialog.component.html
@@ -3,6 +3,6 @@
    Are you sure you want to delete this task : <strong> {{data.todo}} </strong>? 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close (click)="onConfirm()">Yes</button>
+    <button id="confirm-delete" mat-button mat-dialog-close (click)="onConfirm()">Yes</button>
     <button mat-button mat-dialog-close (click)="onCancel()">Cancel</button>
 </mat-dialog-actions>
