--- a/src/app/components/dialog-redirect/dialog-redirect.component.html
+++ b/src/app/components/dialog-redirect/dialog-redirect.component.html
@@ -3,6 +3,6 @@
     You will be redirected to the login page . 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close (click)="onConfirm()">OK</button>
+    <button id="ok-button" mat-button mat-dialog-close (click)="onConfirm()">OK</button>
 </mat-dialog-actions>
 
